[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/entities/player/Sprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/entities/player/DirectionArrow.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/UI/Attack.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/UI/Dash.png" type="Texture" id=5]
[ext_resource path="res://scenes/entities/player/DashIcon.gd" type="Script" id=6]
[ext_resource path="res://scenes/entities/player/AttackIcon.gd" type="Script" id=7]
[ext_resource path="res://scenes/entities/player/NormalSlash.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/ui/lifebar/LifebarBack.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/lifebar/LifebarFillpng.png" type="Texture" id=10]
[ext_resource path="res://scenes/entities/player/Lifebar.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38.5, 191.5 )

[sub_resource type="Animation" id=5]
resource_name = "Attack"
length = 0.1
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Arm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Sword:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -270.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Sword:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.075, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -34, -34 ), Vector2( -30, -18 ), Vector2( -34, -34 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Iddle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.149978, 0.351946, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, -10.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=2]

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 1 )
normal_attack_scene = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 10.0

[node name="UI" type="CanvasLayer" parent="Camera2D"]

[node name="DashIcon" type="TextureRect" parent="Camera2D/UI"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 811.0
margin_top = 509.0
margin_right = 1451.0
margin_bottom = 1149.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="AttackIcon" type="TextureRect" parent="Camera2D/UI"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 904.0
margin_top = 486.0
margin_right = 1264.0
margin_bottom = 846.0
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
script = ExtResource( 7 )

[node name="Lifebar" type="TextureProgress" parent="Camera2D/UI"]
anchor_right = 0.295
anchor_bottom = 0.143
margin_left = 6.0
margin_top = 6.0
margin_right = -69.08
margin_bottom = -20.8
rect_scale = Vector2( 1.5, 1.5 )
min_value = -30.0
max_value = 107.0
value = 100.0
allow_greater = true
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
script = ExtResource( 11 )

[node name="Sprite" parent="." instance=ExtResource( 2 )]

[node name="Sword" parent="Sprite" index="2"]
position = Vector2( -34, -34 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
scale = Vector2( 0.25, 0.25 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 5 )
anims/Iddle = SubResource( 4 )
anims/Walk = SubResource( 3 )

[node name="NormalAttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="DirectionArrow" parent="." instance=ExtResource( 3 )]

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DashDuration" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="GroundDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundDetector"]
modulate = Color( 0.25098, 0.737255, 0.45098, 1 )
position = Vector2( -2, 58 )
shape = SubResource( 2 )

[node name="AttackLock" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AudioPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="NormalAttackCooldown" to="." method="_on_NormalAttackCooldown_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
[connection signal="timeout" from="DashDuration" to="." method="_on_DashDuration_timeout"]
[connection signal="area_entered" from="GroundDetector" to="." method="_on_GroundDetector_area_entered"]
[connection signal="area_exited" from="GroundDetector" to="." method="_on_GroundDetector_area_exited"]
[connection signal="timeout" from="AttackLock" to="." method="_on_AttackCommit_timeout"]

[editable path="Sprite"]
